fix visibility issues in ChartLine

--- a/src/ChartLine/style.css
+++ b/src/ChartLine/style.css
@@ -6,6 +6,7 @@
     position: relative;
     text-align: center;
     align-items: flex-end;
+    z-index: 1;
 
     &.ola-skeleton {
         --color: var(--gray-xlight);
